--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,11 +3,10 @@ $primary: darken(#428bca, 20%);
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
+@import "components/all";
+@import "sections/all";
 
-.nfq-academy {
-  margin: 20px auto;
-  text-align: center;
-  font-size: 96px;
-  font-weight: 100;
-  font-family: 'Lato', serif;
+body {
+  font-family: 'Lato', sans-serif;
 }
+
