--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,13 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
+        <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1549984893" />
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
+        <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+        <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+        <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+        <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
     </head>
     <body>
         {% block body %}{% endblock %}
