--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,4 +4,5 @@
 
 {% block body %}
     <div class="nfq-academy">{{ someVariable }}</div>
+    {% include 'includes/Hmap.html.twig' %}
 {% endblock %}
