--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,10 +9,12 @@
         <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1549984893" />
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
+        {# Scripts required for HERE maps #}
         <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
         <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
         <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
         <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+        {# /end of required HERE map scripts#}
     </head>
     <body>
         {% block body %}{% endblock %}
