mather table updated only when new driver registers

--- a/templates/home/matches.html.twig
+++ b/templates/home/matches.html.twig
@@ -10,7 +10,7 @@
                     <div>{{ user.name }}
                         <ul>
                             <li>Amžius: {{ user.age }}</li>
-                            <li>Marsrutas: {{ user.route_description }}</li>
+                            <li>Marsrutas: {{ user.routeDescription }}</li>
                             <li>Atstumas tarp gyvenamu vietų: {{ matchDetails[user.id].home_distance }} km</li>
                             <li>Atstumas tarp darbo vietų: {{ matchDetails[user.id].work_distance }} km</li>
                             <li>Apie: {{ user.description }}</li>
