--- a/templates/registration/route-register.html.twig
+++ b/templates/registration/route-register.html.twig
@@ -21,7 +21,7 @@
 
 </style>
 
-    {{ form(route_form, {'action': path('saveRoute'), 'method': 'POST'}) }}
+    {{ form(route_form) }}
 
 <div id="map"></div>
 
