filter form in matches page

--- a/templates/home/matches.html.twig
+++ b/templates/home/matches.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
             <h1>Matched Members</h1>
-
+    {{ form(filter_form) }}
                 {% for user in users %}
                     <div>{{ user.name }}
                         <ul>
