--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+        <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+{#        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>#}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
