--- a/templates/registration/route-register.html.twig
+++ b/templates/registration/route-register.html.twig
@@ -5,44 +5,61 @@
 {% block body %}
     <section class="section-route-reg">
         {{ include('partials/nav.html.twig') }}
+        <aside class="route-registration">
+            <div class="route-registration__header">Užregistruok savo kelionės maršrutą!</div>
+            {{ form_start(route_form, {'attr': {'class': 'route-registration__form'}}) }}
+                <div class="form-group">
+                    <div class="mdc-text-field username">
+                        {{ form_widget(route_form.name) }}
+                        <div class="mdc-line-ripple"></div>
+                        <label class="mdc-floating-label">Vardas</label>
+                    </div>
+                    <div class="mdc-text-field age">
+                        {{ form_widget(route_form.age) }}
+                        <div class="mdc-line-ripple"></div>
+                        <label class="mdc-floating-label">Amžius</label>
+                    </div>
+                </div>
+                <div class="mdc-text-field origin">
+                    {{ form_widget(route_form.origin_input) }}
+                    <div class="mdc-line-ripple"></div>
+                    <label class="mdc-floating-label">Kelionės pradžia</label>
+                </div>
+                <div class="mdc-text-field destination">
+                    {{ form_widget(route_form.destination_input) }}
+                    <div class="mdc-line-ripple"></div>
+                    <label class="mdc-floating-label">Kelionės tikslas</label>
+                </div>
+                <div>
+                <div class="mdc-text-field mdc-text-field--outlined route-desc">
+                    {{ form_widget(route_form.route_description) }}
+                    <div class="mdc-notched-outline">
+                        <div class="mdc-notched-outline__leading"></div>
+                        <div class="mdc-notched-outline__notch">
+                            <label for="tf-outlined" class="mdc-floating-label">Aprašymas</label>
+                        </div>
+                        <div class="mdc-notched-outline__trailing"></div>
 
-        {{ form_start(route_form, {'attr': {'class': 'route-reg'}}) }}
-            <div class="form-group">
-                {{ form_label(route_form.name) }}
-                {{ form_widget(route_form.name) }}
-            </div>
-            <div class="mdc-text-field username">
-                <input class="mdc-text-field__input">
-                <div class="mdc-line-ripple"></div>
-                <label class="mdc-floating-label">Name</label>
-            </div>
-            <div class="form-group">
-                {{ form_label(route_form.age) }}
-                {{ form_widget(route_form.age) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(route_form.role) }}
-                {{ form_widget(route_form.role) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(route_form.route_description) }}
-                {{ form_widget(route_form.route_description) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(route_form.origin_input) }}
-                {{ form_widget(route_form.origin_input) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(route_form.destination_input) }}
-                {{ form_widget(route_form.destination_input) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(route_form.description) }}
-                {{ form_widget(route_form.description) }}
-            </div>
-            {{ form_widget(route_form.save) }}
-        {{ form_end(route_form) }}
-
+                    </div>
+                </div>
+                <div class="mdc-text-field-helper-line">
+                    <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent">Nurodyk laiką, kuriuo važiuosi šiuo maršrutu</div>
+                </div>
+                </div>
+                <div class="mdc-select role">
+                    <i class="mdc-select__dropdown-icon"></i>
+                    {{ form_widget(route_form.role) }}
+                    <label class="mdc-floating-label">Rolė</label>
+                    <div class="mdc-line-ripple"></div>
+                </div>
+    {#            <div class="mdc-text-field desc">#}
+    {#                {{ form_widget(route_form.description) }}#}
+    {#                <div class="mdc-line-ripple"></div>#}
+    {#                <label class="mdc-floating-label">Aprasymas</label>#}
+    {#            </div>#}
+                {{ form_widget(route_form.save) }}
+            {{ form_end(route_form) }}
+        </aside>
         <div id="map"></div>
     </section>
 <script>
