--- a/assets/css/sections/_all.scss
+++ b/assets/css/sections/_all.scss
@@ -1,1 +1,8 @@
 @import "section-main";
+@import "section-route-reg";
+@import "section-matches.scss";
+
+section {
+  height: 100vh;
+  padding-top: 58px;
+}
