--- a/templates/registration/route-register.html.twig
+++ b/templates/registration/route-register.html.twig
@@ -3,28 +3,65 @@
 {% block title %}Route Registration{% endblock %}
 
 {% block body %}
-    <div class="nfq-academy">Route Registration</div>
+    <section class="section-route-reg">
+        {{ include('partials/nav.html.twig') }}
+        <aside class="route-registration">
+            <div class="route-registration__header">Užregistruok savo kelionės maršrutą!</div>
+            {{ form_start(route_form, {'attr': {'class': 'route-registration__form'}}) }}
+                <div class="form-group">
+                    <div class="mdc-text-field username">
+                        {{ form_widget(route_form.name) }}
+                        <div class="mdc-line-ripple"></div>
+                        <label class="mdc-floating-label">Vardas</label>
+                    </div>
+                    <div class="mdc-text-field age">
+                        {{ form_widget(route_form.age) }}
+                        <div class="mdc-line-ripple"></div>
+                        <label class="mdc-floating-label">Amžius</label>
+                    </div>
+                </div>
+                <div class="mdc-text-field origin">
+                    {{ form_widget(route_form.origin_input) }}
+                    <div class="mdc-line-ripple"></div>
+                    <label class="mdc-floating-label">Kelionės pradžia</label>
+                </div>
+                <div class="mdc-text-field destination">
+                    {{ form_widget(route_form.destination_input) }}
+                    <div class="mdc-line-ripple"></div>
+                    <label class="mdc-floating-label">Kelionės tikslas</label>
+                </div>
+                <div>
+                <div class="mdc-text-field mdc-text-field--outlined route-desc">
+                    {{ form_widget(route_form.route_description) }}
+                    <div class="mdc-notched-outline">
+                        <div class="mdc-notched-outline__leading"></div>
+                        <div class="mdc-notched-outline__notch">
+                            <label for="tf-outlined" class="mdc-floating-label">Aprašymas</label>
+                        </div>
+                        <div class="mdc-notched-outline__trailing"></div>
 
-<style>
-    /* Always set the map height explicitly to define the size of the div
-     * element that contains the map. */
-    #map {
-        height: 100%;
-    }
-    /* Optional: Makes the sample page fill the window. */
-    html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-
-
-</style>
-
-    {{ form(route_form) }}
-
-<div id="map"></div>
-
+                    </div>
+                </div>
+                <div class="mdc-text-field-helper-line">
+                    <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent">Nurodyk laiką, kuriuo važiuosi šiuo maršrutu</div>
+                </div>
+                </div>
+                <div class="mdc-select role">
+                    <i class="mdc-select__dropdown-icon"></i>
+                    {{ form_widget(route_form.role) }}
+                    <label class="mdc-floating-label">Rolė</label>
+                    <div class="mdc-line-ripple"></div>
+                </div>
+    {#            <div class="mdc-text-field desc">#}
+    {#                {{ form_widget(route_form.description) }}#}
+    {#                <div class="mdc-line-ripple"></div>#}
+    {#                <label class="mdc-floating-label">Aprasymas</label>#}
+    {#            </div>#}
+                {{ form_widget(route_form.save) }}
+            {{ form_end(route_form) }}
+        </aside>
+        <div id="map"></div>
+    </section>
 <script>
     // This example requires the Places library. Include the libraries=places
     // parameter when you first load the API. For example:
@@ -34,7 +71,7 @@
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
             mapTypeControl: false,
-            center: {lat: -33.8688, lng: 151.2195},
+            center: {lat: 54.897343, lng: 23.882552},
             zoom: 13
         });
 
@@ -53,8 +90,8 @@
         this.directionsDisplay = new google.maps.DirectionsRenderer;
         this.directionsDisplay.setMap(map);
 
-        var originInput = document.getElementById('route_register_origin-input');
-        var destinationInput = document.getElementById('route_register_destination-input');
+        var originInput = document.getElementById('route_register_origin_input');
+        var destinationInput = document.getElementById('route_register_destination_input');
 
 
         var originAutocomplete = new google.maps.places.Autocomplete(originInput);
