Add button in main seciton, add some links

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,8 +19,11 @@
         
         <div class="info">
             <div class="info-main">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.
+                Rask žmones keliaujančius tuo pačiu maršrutu kaip tu, susisiek ir važiuokit drauge !
             </div>
+            <a class="info-button" href="/reg">
+                IŠBANDYK
+            </a>
             <div class="info-cs">
                 Jau greitai ...
             </div>
