--- a/templates/home/matches.html.twig
+++ b/templates/home/matches.html.twig
@@ -11,13 +11,13 @@
                 <div class="mdc-select homedist">
                     <i class="mdc-select__dropdown-icon"></i>
                     {{ form_widget(filter_form.home_distance) }}
-                    <label class="mdc-floating-label">asd</label>
+                    <label class="mdc-floating-label">Atstumas tarp namų</label>
                     <div class="mdc-line-ripple"></div>
                 </div>
                 <div class="mdc-select workdist">
                     <i class="mdc-select__dropdown-icon"></i>
                     {{ form_widget(filter_form.work_distance) }}
-                    <label class="mdc-floating-label">Atstumas tarp darbo vietu</label>
+                    <label class="mdc-floating-label">Atstumas tarp darbo vietų</label>
                     <div class="mdc-line-ripple"></div>
                 </div>
                 {{ form_widget(filter_form.filter) }}
