--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -1,6 +1,8 @@
 <nav class="navigation s">
     <div class="navigation-brand">
-        <img src="/img/logo-w.png" alt="Logo icon">
+        <a href="/" class="brand">
+            <img src="/img/logo-w.png" alt="Logo icon">
+        </a>
     </div>
 
     <ul class="navigation-items">
