--- a/assets/css/sections/section-main.scss
+++ b/assets/css/sections/section-main.scss
@@ -56,7 +56,24 @@
     &-main {
 
     }
+    a {
+      color: white;
+      text-decoration: none;
+    }
 
+    &-button {
+      display: inline-block;
+      margin-top: 30px;
+      font-size: 20px;
+      background: #4098D9;
+      padding: 10px 20px;
+      border-radius: 3px;
+      transition: all .2s;
+      &:hover {
+        cursor: pointer;
+        background: #3485c1;;
+      }
+    }
     &-cs {
       position: absolute;
       bottom: 0;
