--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -1,7 +1,7 @@
 <nav class="navigation s">
-    <div class="navigation-brand">
+    <a href="/" class="brand">
         <img src="/img/logo-w.png" alt="Logo icon">
-    </div>
+    </a>
 
     <ul class="navigation-items">
         <li class="navigation-items__item">Registracija</li>
