--- a/assets/css/sections/section-main.scss
+++ b/assets/css/sections/section-main.scss
@@ -52,7 +52,23 @@
       font-size: 20px;
       bottom: 72px;
     }
-
+    a {
+      color: white;
+      text-decoration: none;
+    }
+    &-button {
+      display: inline-block;
+      margin-top: 30px;
+      font-size: 20px;
+      background: #4098D9;
+      padding: 10px 20px;
+      border-radius: 3px;
+      transition: all .2s;
+      &:hover {
+        cursor: pointer;
+        background: #3485c1;;
+      }
+    }
     &-main {
 
     }
