--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,11 +16,14 @@
         </nav>
 
         <img src="/img/paint.png" alt="" class="main-img">
-        
+
         <div class="info">
             <div class="info-main">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.
+                Rask žmones keliaujančius tuo pačiu maršrutu kaip tu, susisiek ir važiuokit drauge !
             </div>
+            <a class="info-button" href="/reg">
+                IŠBANDYK
+            </a>
             <div class="info-cs">
                 Jau greitai ...
             </div>
