Fix brand image bug

--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -1,5 +1,5 @@
 <nav class="navigation s">
-    <a href="/" class="brand">
+    <a href="/" class="navigation-brand">
         <img src="/img/logo-w.png" alt="Logo icon">
     </a>
 
