--- a/templates/registration/route-register.html.twig
+++ b/templates/registration/route-register.html.twig
@@ -69,7 +69,7 @@
                 <div class="mdc-select role">
                     <i class="mdc-select__dropdown-icon"></i>
                     {{ form_widget(route_form.role) }}
-                    <label class="mdc-floating-label">Rolė<br></label>
+{#                    <label class="mdc-floating-label">Rolė<br></label>#}
                     <div class="mdc-line-ripple"></div>
                 </div>
 
