--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,7 +21,7 @@
             <div class="info-main">
                 Rask žmones keliaujančius tuo pačiu maršrutu kaip tu, susisiek ir važiuokit drauge !
             </div>
-            <a class="info-button" href="/reg">
+            <a class="info-button" href="/register">
                 IŠBANDYK
             </a>
             <div class="info-cs">
