--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -6,7 +6,7 @@
     </div>
 
     <ul class="navigation-items">
-        <li class="navigation-items__item"><a href="/reg">Registracija</a></li>
-        <li class="navigation-items__item">Prisijungimas</li>
+        <li class="navigation-items__item"><a href="/register">Registracija</a></li>
+        <li class="navigation-items__item"><a href="/login">Prisijungimas</a></li>
     </ul>
 </nav>
