home page login menu

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,8 +10,8 @@
             </div>
 
             <ul class="navigation-items">
-                <li class="navigation-items__item">Registracija</li>
-                <li class="navigation-items__item">Prisijungimas</li>
+                <li class="navigation-items__item"><a href="/register">Registracija</a></li>
+                <li class="navigation-items__item"><a href="/login">Prisijungimas</a></li>
             </ul>
         </nav>
 
