--- a/templates/home/matches.html.twig
+++ b/templates/home/matches.html.twig
@@ -67,11 +67,11 @@
                 </div>
             {% endfor %}
             {% if page > 1 %}
-             <a href="matches?page={{ page - 1 }}">Ankstesnis</a>
-             <a href="matches?page={{ page + 1 }}">Sekantis</a>
+             <a href="?page={{ page - 1 }}">Ankstesnis</a>
+             <a href="?page={{ page + 1 }}">Sekantis</a>
             {% endif %}
             {% if page <= 1 %}
-                <a href="matches?page=2">Sekantis</a>
+                <a href="?page=2">Sekantis</a>
             {% endif %}
         </div>
     </section>
